fix: fix sidebar width overflow for desktops

--- a/src/components/Navbar/Navbar2.css
+++ b/src/components/Navbar/Navbar2.css
@@ -83,7 +83,7 @@
   position: fixed;
   top: 0;
   left: -250px;
-  width: 250px;
+  /* width: 250px; */
   height: 100%;
   background-color: #111;
   padding: 20px;
